--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "types": ["node"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "api"]
+  "exclude": ["node_modules"]
 }
