refactor: Update app version to stable release
Reverts the application version to 1.0.0 (Stable) to reflect the current development stage and preparation for broader release. This change impacts site-settings.json and siteSettings.ts.

--- a/public/site-settings.json
+++ b/public/site-settings.json
@@ -1,7 +1,7 @@
 {
   "general": {
     "appName": "Lotto AI",
-    "version": "1.4.0 (Global)",
+    "version": "1.0.0 (Stable)",
     "companyName": "AI Power Draw"
   },
   "affiliates": {
