--- a/site-settings.json
+++ b/site-settings.json
@@ -1,7 +1,7 @@
 {
   "general": {
     "appName": "Lotto AI",
-    "version": "1.4.0 (Global)",
+    "version": "1.0.0 (Stable)",
     "companyName": "AI Power Draw"
   },
   "affiliates": {
