feat: Update site configuration with new URLs
Updates site settings to reflect new affiliate and donation URLs. This change ensures that "Play Now" buttons and custom ads link to the correct external websites, and provides a placeholder for the user's Ko-fi donation profile.

--- a/public/site-settings.json
+++ b/public/site-settings.json
@@ -11,7 +11,7 @@
   },
   "donation": {
     "enabled": true,
-    "url": "https://ko-fi.com"
+    "url": "https://ko-fi.com/YOUR_USERNAME_HERE"
   },
   "adsense": {
     "publisherId": "ca-pub-XXXXXXXXXXXXXXXX",
@@ -27,25 +27,25 @@
     "sidebar": {
       "enabled": true,
       "image": "/ad-square.png",
-      "url": "https://your-website.com",
+      "url": "https://www.lotteryoffice.com.au",
       "alt": "Check out our partner"
     },
     "mainResult": {
       "enabled": true,
       "image": "/ad-banner.png",
-      "url": "https://your-website.com",
+      "url": "https://www.lotteryoffice.com.au",
       "alt": "Play Now"
     },
     "footer": {
       "enabled": true,
       "image": "/ad-banner.png",
-      "url": "https://your-website.com",
+      "url": "https://www.lotteryoffice.com.au",
       "alt": "Support"
     },
     "vault": {
       "enabled": true,
       "image": "/ad-square.png",
-      "url": "https://your-website.com",
+      "url": "https://www.lotteryoffice.com.au",
       "alt": "Premium"
     }
   }
