feat: Integrate affiliate links and site verification
Adds affiliate buy links in various components and a Google site verification meta tag for SEO. Also enhances the visual presentation of affiliate links and introduces a sticky footer for promotions. This change aims to improve monetization and search engine discoverability.

--- a/public/site-settings.json
+++ b/public/site-settings.json
@@ -1,3 +1,4 @@
+
 {
   "general": {
     "appName": "Lotto AI",
@@ -14,7 +15,7 @@
     "url": "https://ko-fi.com/lottoai"
   },
   "adsense": {
-    "publisherId": "ca-pub-XXXXXXXXXXXXXXXX",
+    "publisherId": "ca-pub-8761648075829250",
     "showLabel": true,
     "slots": {
       "sidebar": "1234567890",
