--- a/site-settings.json
+++ b/site-settings.json
@@ -1,3 +1,4 @@
+
 {
   "general": {
     "appName": "Lotto AI",
@@ -14,7 +15,7 @@
     "url": "https://ko-fi.com/lottoai"
   },
   "adsense": {
-    "publisherId": "ca-pub-XXXXXXXXXXXXXXXX",
+    "publisherId": "ca-pub-8761648075829250",
     "showLabel": true,
     "slots": {
       "sidebar": "1234567890",
