feat: Disable custom ads by default
Sets the `enabled` flag for all custom ad slots to `false` in the site settings. This change ensures that Google Ads are displayed by default, rather than the locally defined custom ads. Comments in `siteSettings.ts` are updated to reflect this behavior and guide users on how to re-enable custom ads if needed.

--- a/public/site-settings.json
+++ b/public/site-settings.json
@@ -26,25 +26,25 @@
   },
   "customAds": {
     "sidebar": {
-      "enabled": true,
+      "enabled": false,
       "image": "/ad-square.png",
       "url": "https://www.1stmg.com.au",
       "alt": "Check out our partner"
     },
     "mainResult": {
-      "enabled": true,
+      "enabled": false,
       "image": "/ad-banner.png",
       "url": "https://www.8milesestate.com.au",
       "alt": "Play Now"
     },
     "footer": {
-      "enabled": true,
+      "enabled": false,
       "image": "/ad-banner.png",
       "url": "https://www.8milesestate.com.au",
       "alt": "Support"
     },
     "vault": {
-      "enabled": true,
+      "enabled": false,
       "image": "/ad-square.png",
       "url": "https://www.1stmg.com.au",
       "alt": "Premium"
