feat: Disable affiliate links by default
The affiliate links are temporarily disabled in the site settings. This change prevents accidental referral link usage until they are approved by The Lottery Office.

The `BUY_LINKS` constant is now conditionally defined based on `settings.affiliates.useAffiliateLinks`. The Gemini AI request logic is also cleaned up by removing the deprecated `aistudio` interface and the direct use of `localStorage` for API keys, relying solely on environment variables.

--- a/public/site-settings.json
+++ b/public/site-settings.json
@@ -8,7 +8,7 @@
   "affiliates": {
     "partnerBaseUrl": "https://www.lotteryoffice.com.au",
     "trackingParam": "",
-    "useAffiliateLinks": true
+    "useAffiliateLinks": false
   },
   "donation": {
     "enabled": true,
